# rca-agent

./: CODEBASE_DEEP_DIVE.md  HOW_TO_RUN_LOCALLY.md  setup_db.py  setup_db.sql
.claude/: settings.local.json
banking-app-master/: .gitignore  Dockerfile  README.md  pom.xml  projects.yaml
banking-app-master/demo-repos/: demo_seed_data.py  push_to_github.sh  seeded_ids.json  setup_git_history.sh
banking-app-master/demo-repos/notification-service/: README.md  pyproject.toml
banking-app-master/demo-ui/: index.html
banking-app-master/error-ingestion-agent/: Dockerfile  datadog_webhook.py  main.py  requirements.txt
banking-app-master/rca-agent/: Dockerfile  README.md  alembic.ini  pyproject.toml
banking-app-master/rca-agent/alembic/: env.py
banking-app-master/rca-agent/alembic/versions/: 001_initial.py
banking-app-master/rca-agent/app/: demo_ui.html  main.py
banking-app-master/rca-agent/evals/: fixtures.py  github_mocks.py  mock_obs_adapter.py  test_eval_suite.py
banking-app-master/rca-agent/rca_agent/: agent.py  cache.py  config.py  db.py  github_tools.py  models.py  repo_resolver.py  report.py  report_renderer.py
banking-app-master/rca-agent/rca_agent/adapters/: protocols.py
banking-app-master/rca-agent/rca_agent/adapters/cicd/: mock_adapter.py  mock_fixtures.py  real_adapter.py
banking-app-master/rca-agent/rca_agent/adapters/observability/: datadog.py  local_db.py
banking-app-master/rca-agent/rca_agent/sub_agents/: repo_discovery.py
banking-app-master/terraform/: README.md  datadog_monitor.tf  variables.tf
(+42 files in other folders)
