[project]
name = "rca-agent"
version = "0.1.0"
description = "AI-powered Root Cause Analysis agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "PyGithub>=2.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rca_agent*", "app*", "evals*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
